--- a/stylesheets/less/admin/04_layout.less
+++ b/stylesheets/less/admin/04_layout.less
@@ -814,7 +814,6 @@ body { overflow: hidden; }
     @media not print {
         
         .search-pagination {
-            position: absolute;
             left: 0;
             bottom: 0;
             padding: 10px 20px;
@@ -1154,7 +1153,7 @@ body { overflow: hidden; }
 
 
 
-#assignRooms, #externalMappings{
+#assignRooms{
     button.button.add-data-inline.toggle-tab {
         box-shadow: none;
         border-radius: 0;
