--- a/admin/partials/mapping/adExternalMappingItems.html
+++ b/admin/partials/mapping/adExternalMappingItems.html
@@ -4,7 +4,7 @@
             <header class="content-title float">
                 <h2>External Mappings</h2>
                 <span class="count">({{extMappingSubComponents.length}})</span>
-                <a ng-click ="goBackToPreviousState()" class="action back" translate>BACK</a>
+                <a ng-click ="navigateBack()" class="action back" translate>BACK</a>
             </header>
         </section>
     </div>
