CICO-25019 Implemented the ftp report sending for ideas, Added the ftp host in snt admin

--- a/admin/partials/interfaces/ideas/adIdeasExport.html
+++ b/admin/partials/interfaces/ideas/adIdeasExport.html
@@ -57,7 +57,7 @@
       <fieldset class="holder left">
          <ad-textbox inputtype="text" value="ideaSetup.ftp_username" label="FTP user name" styleclass="full-width"></ad-textbox>
          <ad-textbox  inputtype="text" value="ideaSetup.ftp_password" label="FTP password" styleclass="full-width"></ad-textbox>
-         <ad-textbox  inputtype="text" value="ideaSetup.ftp_address" label="FTP location" styleclass="full-width" readonly></ad-textbox>
+         <ad-textbox  inputtype="text" value="ideaSetup.ftp_location" label="FTP location" styleclass="full-width" readonly></ad-textbox>
       </fieldset>
        <!-- DELIVERY SETTINGS ENDS HERE -->
       <fieldset class="holder full-width">
