--- a/admin/partials/hotel/adHotelDetails.html
+++ b/admin/partials/hotel/adHotelDetails.html
@@ -292,6 +292,8 @@
 					<input type="text" ng-model="data.hotel_from_address" value="{{data.hotel_from_address}}" placeholder="Enter Email domain and from address for GUEST" name="hotel_from_address" id="hotel_from_address">
 				</div>
 
+				<ad-textbox ng-if="isAdminSnt" value="data.ftp_host" name="ftp-host" id="ftp-host" label="FTP Host" placeholder="Enter FTP Host"></ad-textbox>
+
 				<div class="entry is-pms-tokenized" ng-if="isAdminSnt && data.hotel_pms_type ==='OWS'">
 					<label for="use-kiosk-entity-id-for-fetch-booking">Use KIOSK entity id in FetchBooking</label>
 					<div class="switch-button single" ng-class="{ on : data.use_kiosk_entity_id_for_fetch_booking == 'true' }" ng-click="kioskEntityToggleClicked()">
