CICO-34678 updated the search results UI

--- a/rover/css/rover_scroll_fix.css.less
+++ b/rover/css/rover_scroll_fix.css.less
@@ -213,4 +213,12 @@
 .conversation-wrapper{
   height: 0px;
 }
+.neighbours-search-results-label{
+    font-size: 18px;
+    line-height: 20px;
+    font-style: italic;
+    font-weight: 400;
+    color : #9d9d9d;
+    margin-left: 20px;
+}
 
