CICO-24241 - React wrapper style update

--- a/stylesheets/less/app/screens/22.diary-nightly.less
+++ b/stylesheets/less/app/screens/22.diary-nightly.less
@@ -726,6 +726,10 @@
     }    
 
     /* Grid Content - Rooms & Reservations ***/
+    .grid-wrapper {
+        .square(100%);
+    }
+    
     .grid-content {
         position: relative;
         z-index: 70;
