--- a/admin/partials/interfaces/ideas/adIdeasExport.html
+++ b/admin/partials/interfaces/ideas/adIdeasExport.html
@@ -12,6 +12,7 @@
             <img class="toggle-up" src="/assets/cssimg/arrow-up.png">
          </div>
       </div>
+      <div ng-include="'/assets/partials/common/notification_message.html'"></div>
       <fieldset class="holder full-width">
          <ad-form-title full-width="true" form-title="General"></ad-form-title>
          <ad-toggle-button is-checked="ideaSetup.enabled" label="{{'WINDSURFER_CRS_ACTIVATE_INACTIVATE'| translate}}"></ad-toggle-button>
