CICO-24241 - React wrapper style update

--- a/stylesheets/less/app/screens/22.diary-nightly.less
+++ b/stylesheets/less/app/screens/22.diary-nightly.less
@@ -726,7 +726,9 @@
     }    
 
     /* Grid Content - Rooms & Reservations ***/
-    .grid-wrapper {
+    .grid-wrapper,
+    .grid-inner {
+        .show();
         .square(100%);
     }
     
