Fixed scroll issue

--- a/rover/partials/nightlyDiary/rvNightlyDiary.html
+++ b/rover/partials/nightlyDiary/rvNightlyDiary.html
@@ -39,8 +39,8 @@
             </div>
         </div>
 
-        <!-- Rooms + Reservations. YOU CAN RELOAD THIS WHEN SWITCHING 7 or 21 DAYS, NO NEED TO RELOAD ENTIRE SCREEN.  -->
-        <span id="nightlyDiaryMain"></span>
+        <!-- REACT APP :: Rooms list + Reservations list + Un-assigned Reservations list -->
+        <div id="nightlyDiaryMain" class="grid-wrapper"></div>
 
         <div ng-include="'/assets/partials/nightlyDiary/rvNightlyDiaryRightFilterBar.html'"></div>
 
