--- a/admin/partials/interfaces/ExternalMappings/adExternalMappingsAdd.html
+++ b/admin/partials/interfaces/ExternalMappings/adExternalMappingsAdd.html
@@ -2,7 +2,7 @@
     <header class="content-title float">
         <h2>New {{interface.name}} mapping</h2>
         <a ng-click="navigateBack()" class="action back" translate>BACK</a>
-        <div class="actions float pull-right">
+        <div class="actions float pull-right" ng-if="mapping.mapping_type === 'ROOM_NUMBER'">
             <button type="button" class="button add-data-inline toggle-tab" ng-click="toggleMappingMode('MANUAL')"
                     ng-class="{'orange' : interface.activeTab === 'MANUAL', 'white' : interface.activeTab !== 'MANUAL'}">
                 MAP MANUALLY
@@ -25,6 +25,7 @@
             </fieldset>
             <fieldset class="holder left">
                 <ad-dropdown-name savemodel="mapping.mapping_type"
+                                  change-handler="onChangeMappingType"
                                   valueproperty="name"
                                   property="text"
                                   label-in-drop-down="Select Mapping Type"
