--- a/admin/partials/interfaces/ExternalMappings/adExternalMappingsList.html
+++ b/admin/partials/interfaces/ExternalMappings/adExternalMappingsList.html
@@ -1,11 +1,12 @@
-<div id="wrapper" class="content current admin-scrollfix" div-touch-move-stop-propogate ng-click="clearErrorMessage()">
+<div id="wrapper" class="content current admin-scrollfix" div-touch-move-stop-propogate
+     ng-click="clearErrorMessage()" ng-cloak="">
     <header class="content-title float">
         <h2>{{interface.name}}</h2>
         <span class="count">({{totalCount}})</span>
         <a ng-click="navigateBack()" class="action back" translate>BACK</a>
         <button ng-click="onClickAdd()" class="action add" scrollup="replacing-div-first">Add new</button>
     </header>
-    <section class="content-scroll">
+    <section class="content-scroll" ng-show="totalCount">
         <form class="form with-grid float ui-tabs-panel ui-widget-content ui-corner-bottom" role="tabpanel"
               aria-expanded="true"
               id="externalMappings"
