--- a/rover/partials/socialLobby/rvSLPosts.html
+++ b/rover/partials/socialLobby/rvSLPosts.html
@@ -35,7 +35,7 @@
 <!-- Posts scenario 2: Data exists (L51-L120) -->
 <section id="neighbors-activity"  ng-show="posts.length != 0"  role="main">
     <div ng-include="'/assets/partials/common/notification_message.html'"></div>
-    <div class="neighbours-search-results-label" ng-show="match_count > 0" translate> SL_SEARCH_RESULTS_LABEL </div>
+    <div class="neighbours-search-results-label" ng-show="match_count > 0" translate> {{"We found " + match_count + " results"}} </div>
     <div ng-iscroll='post-list-scroll' class="content scrollable neighbours-post-scroll" ng-class="{'neighbours-post-scroll-error': errorMessage != ''}" >
         <div class="wrapper neighbours-post-container" >
             <div class="activity-post" ng-class="{'has-replies': post.comment_count > 0}" ng-repeat = "post in posts"> <!-- Add class 'has-replies' if there are replies in the conversation. -->
