CICO-32790 adds minor improvements to zest station local admin screen

--- a/zest_station/css/less/layout.less
+++ b/zest_station/css/less/layout.less
@@ -1095,12 +1095,17 @@
 /* Admin Screen */
 .admin-screen {
     &#main {
-        padding-top: 60px;
+        padding-top: 120px;
     }
 
     #textual {
         #calc  > #height > .remove( 100%, 120px ); 
     }
+}
+.admin-screen-title{
+    font-size: 1.7em;
+    position: absolute;
+    top: 75px;
 }
 
 /* QR Code ***/
