CICO-34039 - Style update

--- a/stylesheets/less/app/screens/06.registration.less
+++ b/stylesheets/less/app/screens/06.registration.less
@@ -994,7 +994,7 @@
 
                                 .cost,
                                 strong {
-                                    display:inline-block;
+                                    display:inline-block !important;
                                     vertical-align: middle;
                                 }
 
