--- a/stylesheets/less/app/screens/06.registration.less
+++ b/stylesheets/less/app/screens/06.registration.less
@@ -988,14 +988,14 @@
                                 margin-top:5px;
 
                                 li {
-                                    margin:0;
+                                    margin:0 0 5px 0; 
                                     .box-shadow(0px 1px 0 rgba(0, 0, 0, 0.10));
+                                    #flexbox > .parent(row, center, center, center);
                                 }
 
-                                .cost,
-                                strong {
-                                    display:inline-block !important;
-                                    vertical-align: middle;
+                                strong,
+                                .cost {
+                                    line-height: inherit;
                                 }
 
                                 strong {
