CICO-34410: Show reservation selected and show topbar

--- a/rover/partials/nightlyDiary/rvNightlyDiary.html
+++ b/rover/partials/nightlyDiary/rvNightlyDiary.html
@@ -2,6 +2,7 @@
 <div ng-include="'/assets/partials/common/header.html'"></div>
 
 <div ng-include="'/assets/partials/nightlyDiary/rvNightlyDiaryTopFilterBar.html'"></div>
+<div ng-include="'/assets/partials/nightlyDiary/rvNightlyDiaryTopEditBar.html'"></div>
 
 <div ng-include="'/assets/partials/common/notification_message.html'"></div>
 
@@ -20,10 +21,12 @@
 
             <div ng-include="'/assets/partials/nightlyDiary/rvNightlyDiaryTimeline.html'"></div>
 
+            <div ng-include="'/assets/partials/nightlyDiary/rvNightlyDiaryStayRange.html'"></div>
+
             <!-- Stay Range | Remove .hidden to show-->
-            <div class="grid-stay-range hidden">
+            <!-- <div class="grid-stay-range hidden">
                 {_content/stay-range.html}
-            </div>
+            </div> -->
         </div>
 
         <!-- Room Search Results -->
