CICO-34409 Added events to communicate to parent

--- a/rover/partials/nightlyDiary/rvNightlyDiary.html
+++ b/rover/partials/nightlyDiary/rvNightlyDiary.html
@@ -18,7 +18,7 @@
                 <input type="text" placeholder="Go to Room No." value="">
             </div>
 
-            <div ng-include="'/assets/partials/nightlyDiary/rvNightlyDiaryTimeline.html'"></div>
+            <span ng-include="'/assets/partials/nightlyDiary/rvNightlyDiaryTimeline.html'"></span>
 
             <!-- Stay Range | Remove .hidden to show-->
             <div class="grid-stay-range hidden">
