--- a/rover/partials/nightlyDiary/rvNightlyDiary.html
+++ b/rover/partials/nightlyDiary/rvNightlyDiary.html
@@ -10,7 +10,7 @@
         <!-- Room Search + Timeline -->
         <div class="grid-timeline">
 
-            <div ng-include="'/assets/partials/nightlyDiary/rvNightlyDiaryRoomNumberSearch.html'" class="grid-room-search" ng-controller="rvNightlyDiaryRoomNumberSearchController as vm"></div>
+            <div ng-include="'/assets/partials/nightlyDiary/rvNightlyDiaryRoomNumberSearch.html'" class="grid-room-search" ng-controller="rvNightlyDiaryRoomNumberSearchController"></div>
             
             <div ng-include="'/assets/partials/nightlyDiary/rvNightlyDiaryTimeline.html'"></div>
 
@@ -21,14 +21,7 @@
         </div>
 
         <!-- Room Search Results -->
-        <div class="grid-room-search-results scrollable"  ng-iscroll="result_showing_area" ng-iscroll-delay="1000" ng-show="diaryData.showSearchResultsArea" ng-class="{'visible': diaryData.showSearchResultsArea}">
-            <div class="wrapper">
-                <div class="room" ng-repeat="row in diaryData.roomNumberSearchResults" ng-click="selectRoom(row)">
-                    <span ng-class='(row.service_status === "IN_SERVICE") ? "room-number "+row.hk_status : "room-number out"' ng-bind-html="row.room_no | highlight:diaryData.textInQueryBox:false" ng-click="dateClicked()">
-                    </span>
-                    <span class="room-type">{{row.room_type_name}}</span>
-                </div>
-            </div>
+        <div class="grid-room-search-results scrollable"  ng-iscroll="result_showing_area" ng-iscroll-delay="1000" ng-include="'/assets/partials/nightlyDiary/rvNightlyDiaryRoomNumberSearchResult.html'" ng-show="diaryData.showSearchResultsArea" ng-class="{'visible': diaryData.showSearchResultsArea}">            
         </div>
 
         <!-- REACT APP :: Rooms list + Reservations list + Un-assigned Reservations list -->
