--- a/rover/partials/nightlyDiary/rvNightlyDiaryTopEditBar.html
+++ b/rover/partials/nightlyDiary/rvNightlyDiaryTopEditBar.html
@@ -5,7 +5,7 @@
         </figure>
         <h2 class="name">{{currentSelectedReservation.guest_details.first_name}} {{currentSelectedReservation.guest_details.last_name}}</h2>
         <!-- Opens Stay Card of that guest -->
-        <button type="button" class="button orange">Stay Card</button>
+        <button type="button" class="button orange" ng-click="goToStayCard(currentSelectedReservation)">Stay Card</button>
     </div>
     <div class="actions">
         <!-- Cancels editing, hides edit screen and stay-range, shows search -->
