--- a/stylesheets/less/app/07_print.less
+++ b/stylesheets/less/app/07_print.less
@@ -2134,6 +2134,52 @@
                                     }
                                 }
                             }
+
+                            &.before-total {
+                                td {
+                                    border-bottom: 0;
+                                }
+                            }
+                        }
+                    }
+                }
+
+                &.forecast-group {
+                    thead {
+                        tr {
+                            &.top-row {
+                                th {
+
+                                    font-size: 13px;
+                                }
+                            }
+
+                            &.bottom-row {
+                                th {
+                                    font-size: 12px;
+                                }
+                            }
+                        }
+                    }
+
+                    tbody {
+                        tr {
+                            &.total {
+                             
+                                td {
+                                    border-top: 1px solid @black;
+                                    border-bottom: 1px solid @black;
+
+                                    &.vertical {
+                                        .row {
+                                            strong {
+                                                font-weight: 600;
+                                            }
+                                        }
+                                    }
+                                }
+                                
+                            }
                         }
                     }
                 }
