--- a/rover/partials/nightlyDiary/rvNightlyDiaryRoomNumberSearchResult.html
+++ b/rover/partials/nightlyDiary/rvNightlyDiaryRoomNumberSearchResult.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
 	<div class="room" ng-repeat="row in diaryData.roomNumberSearchResults" ng-click="selectRoom(row)">
-		<span ng-class='(row.service_status === "IN_SERVICE") ? "room-number "+row.hk_status : "room-number out"' ng-bind-html="row.room_no | highlight:diaryData.textInQueryBox:false" ng-click="dateClicked()">
+		<span ng-class='(row.service_status === "IN_SERVICE") ? "room-number "+row.hk_status : "room-number out"' ng-bind-html="row.room_no | highlight:diaryData.textInQueryBox:false" ng-click="gotoSelectedRoom(row)">
 		</span>
 		<span class="room-type">{{row.room_type_name}}</span>
 	</div>
