--- a/stylesheets/less/app/screens/03.search.less
+++ b/stylesheets/less/app/screens/03.search.less
@@ -537,9 +537,57 @@
                             }
                         }
 
-                        tr:nth-child(odd) { 
+                       tr.odd { 
                             td { background: @grey1; }
+                        } 
+
+                        /* Charge Items in AR Transactions*/
+                        .charge-items {
+                           
+                            td {
+                                font-size: 12px;
+                                padding-top: 0;
+                                padding-right: 0;
+                                padding-left: 0;
+
+                                li {
+                                    margin-bottom: 5px;
+                                    .box-shadow(0px 1px 0 rgba(0, 0, 0, 0.10));
+                                }
+
+                                &.description {
+                                    padding-left: 9px;
+                                }
+
+                                &.description + td {
+                                    padding-right: 12px;
+                                    li {
+                                        padding-left: 9px;
+                                    }
+                                }
+                            }
                         }
+                    }
+
+                    /** Toggle in AR Transactions */
+                    .toggle {
+                        cursor: pointer;
+
+                        .icon-double-arrow {
+                            display: inline-block; 
+                            background-position: 1px -797px;
+                            background-size: 60px;
+                            .square(12px);
+                            .icons > .rotate-down;
+                        }
+
+                        &.active {
+                              
+                            .icon-double-arrow {
+                                background-position: 3px -798px;
+                                .icons > .rotate-up;
+                            }
+                        } 
                     } 
                 }
 
