--- a/stylesheets/less/app/screens/02.dashboard.less
+++ b/stylesheets/less/app/screens/02.dashboard.less
@@ -226,6 +226,10 @@
                         .box-shadow(none);
                     }
                 }
+
+                &.col-4 li {
+                    .calc-width(25, 32);
+                }
             }
 
             .actions {
