--- a/rover/partials/dashboard/rvDbHouseKeepingRoomsSection.html
+++ b/rover/partials/dashboard/rvDbHouseKeepingRoomsSection.html
@@ -6,7 +6,9 @@
         <li><a class="button red" ng-click="clickedOnRoomButton($event, 'DEPARTURES_DIRTY')"><strong>{{statisticsData.rooms.departure_dirty}}</strong> Departures <span>(Dirty)</span></a></li>
         <li><a class="button red" ng-click="clickedOnRoomButton($event, 'DEPARTURES_CLEAN')"><strong>{{statisticsData.rooms.departure_clean}}</strong> Departures <span>(Clean)</span></a></li>        
     </ul>
-    <ul class="data">
+    <!--PLEASE DO NOT REMOVE THIS H3, DESIGN WILL BREAK-->
+    <h3>&nbsp;</h3>
+    <ul class="data col-4">
         <li click-touch="clickedOnRoomButton($event, 'INHOUSE_DIRTY')">Stays (Dirty) <strong class="value blue">{{statisticsData.rooms.stays_dirty}}</strong></li>
         <li click-touch="clickedOnRoomButton($event, 'INHOUSE_CLEAN')">Stays (Clean) <strong class="value blue">{{statisticsData.rooms.stays_clean}}</strong></li>
         <li click-touch="clickedOnRoomButton($event, 'DEPARTURES_DIRTY')">Departures (Dirty) <strong class="value red">{{statisticsData.rooms.departure_dirty}}</strong></li>
